--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
 <!doctype html>
 <html>
 <head>
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-58HJLLD');</script>
-
   <meta charset="utf-8">
   <title>videojs-tbx-gtm Demo</title>
   <link href="node_modules/video.js/dist/video-js.css" rel="stylesheet">
@@ -27,7 +21,7 @@
     (function(window, videojs) {
       var examplePlayer = window.examplePlayer = videojs('videojs-tbx-gtm-player');
       var tbxGtm = window.tbxGtm = examplePlayer.tbxGtm({
-        gtmDataLayer: window.dataLayer,
+        gtmKey: 'GTM-58HJLLD',
         additionalData: {
           name: 'Doom Eternal - Official E3 Story Trailer'
         },
