--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>videojs-tbx-gtm Demo</title>
+  <title>videojs-gtm-plugin Demo</title>
   <link href="node_modules/video.js/dist/video-js.css" rel="stylesheet">
   
 </head>
 <body>
-  <video width="800" id="videojs-tbx-gtm-player" class="video-js vjs-default-skin" controls>
+  <video width="800" id="videojs-gtm-plugin-player" class="video-js vjs-default-skin" controls>
     <source src="/static/doometernal.mp4" type='video/mp4'>
     <source src="//vjs.zencdn.net/v/oceans.webm" type='video/webm'>
   </video>
@@ -16,10 +16,10 @@
     
   </ul>
   <script src="node_modules/video.js/dist/video.js"></script>
-  <script src="dist/videojs-tbx-gtm.js"></script>
+  <script src="dist/videojs-gtm-plugin.js"></script>
   <script>
     (function(window, videojs) {
-      var examplePlayer = window.examplePlayer = videojs('videojs-tbx-gtm-player');
+      var examplePlayer = window.examplePlayer = videojs('videojs-gtm-plugin-player');
       var tbxGtm = window.tbxGtm = examplePlayer.tbxGtm({
         gtmKey: 'GTM-58HJLLD',
         additionalData: {
