renamed internal key for plugin (simplified to 'gtm')

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <script>
     (function(window, videojs) {
       var examplePlayer = window.examplePlayer = videojs('videojs-gtm-plugin-player');
-      var tbxGtm = window.tbxGtm = examplePlayer.tbxGtm({
+      debugger;
+
+      var gtm = window.gtm = examplePlayer.gtm({
         gtmKey: 'GTM-58HJLLD',
         additionalData: {
           name: 'Doom Eternal - Official E3 Story Trailer'
