--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <video width="800" id="videojs-gtm-plugin-player" class="video-js vjs-default-skin" controls>
-    <source src="/static/doometernal.mp4" type='video/mp4'>
+    <source src="//vjs.zencdn.net/v/oceans.mp4" type='video/mp4'>
     <source src="//vjs.zencdn.net/v/oceans.webm" type='video/webm'>
   </video>
   <ul>
     <li><a href="/test/debug.html">Run unit tests in browser.</a></li>
-    
+
   </ul>
   <script src="node_modules/video.js/dist/video.js"></script>
   <script src="dist/videojs-gtm-plugin.js"></script>
